--- a/portfolio.html
+++ b/portfolio.html
@@ -7,42 +7,37 @@
     <link rel="stylesheet" href="portfolio.css" />
   </head>
   <body>
-    <header>
+    <header id="animals">
       <h1>Wild Animals</h1>
       <h2>Big Cats</h2>
       <img src="wildAnimals.jpg" alt="African Savana" />
     </header>
 
     <main>
-      <h2>lion</h2>
-      <section>
-        <div>
+      <h2 class="naslov">lion</h2>
+      <section id="lion">
+        <div class="lav">
           <details>
             <summary>lion</summary>
             <p>
               The lion (Panthera leo) is a large cat of the genus Panthera
               native to Africa and India. It has a muscular, broad-chested body;
               short, rounded head; round ears; and a hairy tuft at the end of
-              its tail. It is sexually dimorphic; adult male lions are larger
-              than females and have a prominent mane. It is a social species,
-              forming groups called prides.
+              its tail.
             </p>
             <p>
               A lion's pride consists of a few adult males, related females, and
               cubs. Groups of female lions usually hunt together, preying mostly
               on large ungulates. The lion is an apex and keystone predator;
-              although some lions scavenge when opportunities occur and have
-              been known to hunt humans, lions typically do not actively seek
-              out and prey on humans.
             </p>
           </details>
           <img src="lion.jpg" alt="simba" />
           <span>Simba</span>
         </div>
       </section>
-      <h2>Tiger</h2>
-      <section>
-        <div>
+      <h2 class="sher">Tiger</h2>
+      <section id="tiger">
+        <div class="Khan">
           <details>
             <summary>Tiger</summary>
             <p>
@@ -50,22 +45,13 @@
               a member of the genus Panthera. It is most recognisable for its
               dark vertical stripes on orange fur with a white underside. An
               apex predator, it primarily preys on ungulates, such as deer and
-              wild boar. It is territorial and generally a solitary but social
-              predator, requiring large contiguous areas of habitat to support
-              its requirements for prey and rearing of its offspring. Tiger cubs
-              stay with their mother for about two years and then become
-              independent, leaving their mother's home range to establish their
-              own.
+              wild boar.
             </p>
             <p>
-              The tiger was first scientifically described in 1758. It once
-              ranged widely from the Eastern Anatolia Region in the west to the
-              Amur River basin in the east, and in the south from the foothills
-              of the Himalayas to Bali in the Sunda Islands. Since the early
-              20th century, tiger populations have lost at least 93% of their
-              historic range and have been extirpated from Western and Central
-              Asia, the islands of Java and Bali, and in large areas of
-              Southeast and South Asia and China. What remains of the range
+              Since the early 20th century, tiger populations have lost at least
+              93% of their historic range and have been extirpated from Western
+              and Central Asia, the islands of Java and Bali, and in large areas
+              of Southeast and South Asia and China. What remains of the range
               where tigers still roam free is fragmented, stretching in spots
               from Siberian temperate forests to subtropical and tropical
               forests on the Indian subcontinent, Indochina and a single
@@ -76,9 +62,9 @@
           <span>Sher Khan</span>
         </div>
       </section>
-      <h2>Black Panther</h2>
-      <section>
-        <div>
+      <h2 class="black">Black Panther</h2>
+      <section id="panter">
+        <div class="black-panter">
           <details>
             <summary>Black Panther</summary>
             <p>
@@ -86,9 +72,7 @@
               (Panthera pardus) and the jaguar (Panthera onca). Black panthers
               of both species have excess black pigments, but their typical
               rosettes are also present. They have been documented mostly in
-              tropical forests, with black leopards in Africa and Asia, and
-              black jaguars in South America. Melanism is caused by a recessive
-              allele in the leopard, and by a dominant allele in the jaguar.
+              tropical forests
             </p>
             <p>
               In 1788, Jean-Claude Delamétherie described a black leopard that
@@ -97,26 +81,16 @@
               scientific name Felis fusca for this cat, the Indian leopard (P.
               p. fusca).[2][3] In 1809, Georges Cuvier described a black leopard
               kept in the Ménagerie du Jardin des plantes that had been brought
-              from Java. Cuvier proposed the name Felis melas, the Javan leopard
-              (P. p. melas).[4][3] By the late 19th century, the occurrence of
-              black and spotted leopard cubs in the same litter had been
-              repeatedly recorded in India. Black leopards were thought to be
-              more common in Travancore and in the hills of southern India than
-              in other parts of the country.[5] Black leopards were also
-              frequently encountered in southern Myanmar.[6] By 1929, the
-              Natural History Museum, London had skins of black leopards
-              collected in South Africa, Nepal, Assam and Kanara in India.[7]
-              Black leopards were thought to be common on the Malay Peninsula
-              and on Java.[8]
+              from Java. Cuvier proposed the name Felis melas
             </p>
           </details>
-          <img src="panter.gif" alt="Bagheera" />
+          <img src="panter.webp" alt="Bagheera" />
           <span>Bagheera</span>
         </div>
       </section>
-      <h2>Snow Leopard</h2>
-      <section>
-        <div>
+      <h2 class="snow">Snow Leopard</h2>
+      <section id="leopard">
+        <div class="snow-leopard">
           <details>
             <summary>Snow Leopard</summary>
             <p>
@@ -145,9 +119,21 @@
             </p>
           </details>
           <img src="SnowLeopard.webp" alt="Tai Lung" />
-          <p>Tai Lung</p>
+          <span>Tai Lung</span>
         </div>
       </section>
     </main>
+    <footer>
+      <p>Protect the animals</p>
+      <a
+        href="https://www.tvinsider.com/network/animal-planet/schedule/"
+        target="_blank"
+        >Animal planet</a
+      >
+      <a href="https://www.nationalgeographic.com/" target="_blankg"
+        >Nacional Geography</a
+      >
+      <p>&copy; My Portfolio 2023</p>
+    </footer>
   </body>
 </html>
